# trainR

./: .dockerignore  .env.example  .gitignore  ARCH_EXECUTION_CHECKLIST.md  ARCH_REMEDIATION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.benchmark  Makefile  ORCHESTRATOR_IMPLEMENTATION_PLAN.md  ORCHESTRATOR_VISUALIZER_WORK_PACKAGES.md  ORCHESTRATOR_WORK_PACKAGES.md  PACKAGES.md  PLAN.md  README.md  config.py  docker-compose.yml  log.txt  package.json  pyproject.toml  requirements.R
.factory/: services.yaml
.github/workflows/: ci.yaml
bench/: __init__.py  runner.py
bench/dataset/: __init__.py  decontam.py  manager.py  migrate.py
bench/eval/: __init__.py  prompt_builder.py  skill_policy.py  telemetry.py  tool_registry.py
bench/experiments/: __init__.py  config.py  matrix.py  runner.py
bench/harness/: __init__.py  base.py  registry.py
bench/optimize/: __init__.py  gepa_adapter.py  runtime.py
bench/profiles/: __init__.py  support.py  tools.py
bench/provider/: __init__.py  auth.py  env.py  inference.py  models.py  preflight.py  resolver.py
bench/reports/: __init__.py  paired.py
bench/sandbox/: __init__.py  docker.py  policy.py
bench/schema/: __init__.py
bench/telemetry/: __init__.py  collector.py  cost.py  schema.py
benchmark/: __init__.py  schema.py
configs/: .gitkeep  baseline_no_skill.yaml  baseline_no_skill_46.yaml  baseline_no_skill_47.yaml  baseline_no_skill_minimax.yaml  baseline_no_skill_nvidia.yaml  baseline_no_skill_openai.yaml  baseline_no_skill_stepfun.yaml  baseline_skill.yaml  baseline_skill_46.yaml  baseline_skill_47.yaml  baseline_skill_minimax.yaml  baseline_skill_nvidia.yaml  baseline_skill_openai.yaml  baseline_skill_stepfun.yaml  baselines.yaml  benchmark.yaml  benchmark_models.yaml  benchmark_quick.yaml  evaluation.yaml  evaluation_config.yaml  gepa_config.yaml  gepa_config_v1.1.yaml  llm.yaml  mining.yaml  package_repos.yaml  quick_test.yaml  repos_to_mine.yaml  smoke.yaml
configs/dataset/: default.yaml
configs/examples/: multi_model.yaml  optimize_smoke.yaml  provider_setup.yaml  single_model.yaml  skill_optimization.yaml  smoke.yaml
configs/experiments/: first_benchmark.yaml  first_benchmark_no_zai.yaml  kimi_test.yaml  r_bench_smoke.yaml  support_pair_smoke.yaml  tool_ab_smoke.yaml
configs/optimize/: skill_smoke.yaml
docker/: .gitkeep  Dockerfile.evaluation  entrypoint.sh  models.json  pi-tool-trace-extension.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  benchmark-architecture.md  kaggle-data-strategy.md
evaluation/: .gitkeep  __init__.py  config.py  models.py  pi_runner.py  sandbox.py  test_runner.py
fixtures/package_template/: DESCRIPTION  NAMESPACE
notebooks/: .gitkeep
optimization/: __init__.py  adapter.py  config.py
posit_gskill/: __init__.py  cli.py  commands.py
scripts/: .gitkeep  Rprofile.site  aggregate_results.py  benchmark_report.py  benchmark_summary.py  ci_smoke.sh  compare_results.py  docker-entrypoint.sh  download_kaggle_data.py  evaluate_batch.py  export_visualizer_data.py  generate_tasks.py  install_claude_cli.sh  lint.sh  migrate_tasks_to_v1.py  mine_kaggle.py  mine_prs.py  mini_benchmark.py  run_all_baselines.sh  run_benchmark.py  run_benchmark.sh  run_evaluation.py  run_experiment.py  run_kaggle_benchmark.sh  run_optimization.py  run_optimize.py  run_parallel_benchmark.py  scheduled_mine.sh  test_benchmark.py  test_docker_pi_runner.py  test_pi_runner.py  validate_contracts.py  watch_experiment.py
skills/: minimal-seed.md  testing-r-packages-orig.md
src/grist_mill/: __init__.py  config.py  interfaces.py
task_generator/: .gitkeep  __init__.py  ast_parser.py  generator.py  mined_task.py  models.py  pattern_extractor.py  quality_gate.py  templates.py
tasks/dev/: .gitkeep  task-0b71dca5.json  task-1bdbd14d.json  task-1bfe4b1e.json  task-1f397ea1.json  task-26cf77ce.json  task-2efa7e10.json  task-30444379.json  task-372b73f0.json  task-374fc428.json  task-3aa56532.json  task-3bb802fd.json  task-469bef9c.json  task-46f45e25.json  task-473faa70.json  task-491ef596.json  task-4b388190.json  task-4d2d3a0f.json  (+42 more)
tests/: .gitkeep  __init__.py  conftest.py  test_agent.py  test_artifact.py  test_ast_parser.py  test_binding.py  test_canonical_runner.py  test_cli.py  test_config.py  test_config_import.py  test_container_logs.py  test_cross_agent_telemetry.py  test_cross_cli_workflow.py  test_cross_error_propagation.py  test_cross_eval_export.py  test_cross_optimization.py  test_cross_provider_report.py  test_cross_schema_consistency.py  test_cross_tool_binding.py  test_dataset.py  test_docker_runner.py  test_environments.py  test_eval_prompt_builder.py  test_evaluation_config.py  test_experiment_config_behavior.py  test_experiment_kaggle_scoring.py  test_export.py  test_gepa_adapter.py  test_harness.py  test_harness_integration.py  test_interfaces.py  test_local_runner.py  test_mine_prs_llm_judge.py  test_mined_task.py  test_mutation.py  test_optimization.py  test_optimization_runtime.py  test_package.py  test_pi_runner.py  (+19 more)
visualizer/: README.md  package.json
(+657 files in other folders)
