[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grist-mill"
version = "0.1.0"
description = "Language-agnostic benchmarking framework for evaluating autonomous coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "grist-mill contributors" },
]
keywords = [
    "benchmarking",
    "agents",
    "evaluation",
    "optimization",
    "coding-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
optimization = [
    "gepa",
]
synthesis = [
    "tree-sitter-language-pack",
]
providers = [
    "openai>=1.0.0",
]

[project.scripts]
grist-mill = "grist_mill.cli.main:cli"

[project.urls]
Homepage = "https://github.com/grist-mill/grist-mill"
Documentation = "https://github.com/grist-mill/grist-mill#readme"
Repository = "https://github.com/grist-mill/grist-mill"
Issues = "https://github.com/grist-mill/grist-mill/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ty>=0.0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grist_mill"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501", "TC001", "TC003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ty]
environment.python-version = "3.10"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
invalid-return-type = "warn"
invalid-argument-type = "warn"
unresolved-import = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration_local: Integration tests requiring Docker (skipped if Docker unavailable)",
    "integration_provider: Integration tests requiring real provider credentials",
]
